// Package server provides protobuf types (simplified without code generation)
package server

// Effect represents the authorization effect
type Effect int32

const (
	Effect_EFFECT_UNSPECIFIED Effect = 0
	Effect_EFFECT_ALLOW       Effect = 1
	Effect_EFFECT_DENY        Effect = 2
)

// Principal represents the requester
type Principal struct {
	Id         string
	Type       string
	Roles      []string
	Attributes *Struct
}

// Resource represents the resource being accessed
type Resource struct {
	Kind       string
	Id         string
	Attributes *Struct
}

// CheckRequest represents an authorization check request
type CheckRequest struct {
	RequestId string
	Principal *Principal
	Resource  *Resource
	Actions   []string
	Context   *Struct
}

// ActionResult represents the result for a single action
type ActionResult struct {
	Effect  Effect
	Policy  string
	Rule    string
	Matched bool
}

// ResponseMetadata contains response metadata
type ResponseMetadata struct {
	EvaluationDurationUs float64
	PoliciesEvaluated    int32
	CacheHit             bool
}

// CheckResponse represents an authorization check response
type CheckResponse struct {
	RequestId string
	Results   map[string]*ActionResult
	Metadata  *ResponseMetadata
	Error     string
}

// CheckBatchRequest represents a batch of check requests
type CheckBatchRequest struct {
	Requests []*CheckRequest
}

// CheckBatchResponse represents a batch of check responses
type CheckBatchResponse struct {
	Responses []*CheckResponse
}

// Struct represents a dynamic object (like protobuf Struct)
type Struct struct {
	Fields map[string]*Value
}

// Value represents a dynamic value
type Value struct {
	Kind interface{}
}

// Value_NullValue represents a null value
type Value_NullValue struct {
	NullValue int32
}

// Value_NumberValue represents a number value
type Value_NumberValue struct {
	NumberValue float64
}

// Value_StringValue represents a string value
type Value_StringValue struct {
	StringValue string
}

// Value_BoolValue represents a boolean value
type Value_BoolValue struct {
	BoolValue bool
}

// Value_StructValue represents a struct value
type Value_StructValue struct {
	StructValue *Struct
}

// Value_ListValue represents a list value
type Value_ListValue struct {
	ListValue *ListValue
}

// ListValue represents a list of values
type ListValue struct {
	Values []*Value
}

// AuthzServiceServer is the server interface
type AuthzServiceServer interface {
	Check(ctx interface{}, req *CheckRequest) (*CheckResponse, error)
	CheckBatch(ctx interface{}, req *CheckBatchRequest) (*CheckBatchResponse, error)
	CheckStream(stream AuthzService_CheckStreamServer) error
}

// AuthzService_CheckStreamServer is the stream server interface
type AuthzService_CheckStreamServer interface {
	Recv() (*CheckRequest, error)
	Send(*CheckResponse) error
	Context() interface{}
}

// RegisterAuthzServiceServer registers the service with gRPC
func RegisterAuthzServiceServer(s interface{}, srv AuthzServiceServer) {
	// This would be generated by protoc in production
	// For now, it's a placeholder that would be replaced by generated code
}
